# mdtraj

./: .checkignore  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE_HEADER  MANIFEST.in  Performance Plots.ipynb  README.md  Test.ipynb  add_license.sh  appveyor.yml  azure-pipelines.yml  basesetup.py  default.nix  flake.nix  mypy.ini  pyproject.toml  pytest.ini  requirements_dev.txt  runtests.py  setup.cfg  setup.py  setupbase.py  test.py  test_read.py
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md
.github/workflows/: build-and-pytest-no-intrinsics.yml  build.yaml  main.yaml  wheel.yaml  wheels.yaml
.ipynb_checkpoints/: Test-checkpoint.ipynb
MDTraj/: __init__.py  arc.py  compatibility.py  featurizer.py  hdf5.py  io.py  lh5.py  mdcrd.py  netcdf.py  openmmxml.py  prmtop.py  registry.py  rmsd.py  test_binpos.py  test_dcd.py  test_xtc.py  topology.py  trajectory.py  vectorizer.py
MDTraj/IRMSD/: rmsd_wrap.c  rmsd_wrap.pyx  theobald_rmsd.c  theobald_rmsd.h
MDTraj/IRMSD2/: irmsd.py
MDTraj/binpos/: binpos.c  binpos.pyx  binposlib.pxd
MDTraj/core/: element.py  residue_names.py  selection.py  topology.py  trajectory.py
MDTraj/dcd/: dcd.c  dcd.pyx  dcdlib.pxd
MDTraj/formats/: __init__.py  amberrst.py  arc.py  gro.py  hdf5.py  lammpstrj.py  lh5.py  mdcrd.py  mol2.py  netcdf.py  openmmxml.py  prmtop.py  psf.py  registry.py
MDTraj/geometry/: __init__.py  _distance.c  _distance.pyx  alignment.py  angle.py  contact.py  dihedral.py  distance.py  drid.pyx  dssp.py  hbond.py  internal.py  neighbors.cpp  neighbors.pyx  rg.py  rmsd.py  sasa.py  thermodynamic_properties.py
MDTraj/html/: .install.py.swp  .trajectory_widget.py.swp  Untitled0.ipynb  __init__.py  imagebutton_widget.py  install.py  linked_heatmap.py  mixins.py  trajectory_widget.py
MDTraj/loaders/: mdcrd.py  netcdf.py
MDTraj/netcdf/: netcdf.py
MDTraj/nmr/: __init__.py  scalar_couplings.py  shift_wrappers.py
MDTraj/pdb/: __init__.py  element.py  pdbfile.py  pdbstructure.py  test_element.py  test_pdb.py
MDTraj/reporters/: __init__.py  basereporter.py  dcdreporter.py  hdf5reporter.py  netcdfreporter.py
MDTraj/rmsd/: __init__.py  _lprmsd.pyx  _rmsd.c  _rmsd.pyx  irmsd.py  rmsd.py  test_rmsd.py  wrapper.c  wrapper.pyx
MDTraj/static/: GLmol2.js  RMol.js  Untitled0.ipynb  Untitled1.ipynb  rmcgibbo-interact.ipynb
MDTraj/test/: __init__.py  test_alignment.py  test_binpos.py  test_compatibility.py  test_dcd.py  test_geometry.py  test_hdf5.py  test_io.py  test_mdconvert.py  test_netcdf.py  test_pdb.py  test_reporter.py  test_rmsd.py  test_trajectory.py  test_trr.py  test_xml.py  test_xtc.py
MDTraj/testing/: __init__.py  docscrape.py  docstrings.py  nosetester.py  testing.py
MDTraj/tests/: test_angle_nan.py  test_arc.py  test_binpos.py  test_capi.py  test_compatibility.py  test_crd.py  test_dcd.py  test_dtr.py  test_element.py  test_fah.py  test_geometry.py  test_gro.py  test_hdf5.py  test_io.py  test_lammpstrj.py  test_lh5.py  test_lprmsd.py  test_mdconvert.py  test_mdcrd.py  test_mol2.py  test_netcdf.py  test_nmr.py  test_prmtop.py  test_psf.py  test_reporter.py  test_restart.py  test_rmsd.py  test_rmsd_memmap.py  test_selection.py  test_topology.py  test_trajectory.py  test_trr.py  test_xml.py  test_xtc.py
MDTraj/utils/: __init__.py  arrays.py  contextmanagers.py  delay_import.py  fah.py  ffi.py  test.py  unit.py  unitcell.py  validation.py
MDTraj/vectorizers/: __init__.py  pca.py  tica.py
MDTraj/xtc/: trr.c  trr.pyx  trrlib.pxd  xdrlib.pxd  xtc.c  xtc.pyx
ctest/: Makefile  test.c
cython/: setup.py  test.py  xdrlib.pxd  xtc.pyx
da_tests/: conftest.py  test_topology.py  test_trajectory.py
devtools/: README.md  authors.py  azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
devtools/appveyor-ci/: install.ps1  run_with_env.cmd
devtools/c-tests/: Makefile  README.md  test_geometry.c  test_rmsd.c
devtools/ci/: after_sucess.sh  install.sh  (+7 more)
docs/: .gitignore  Makefile  ala2.h5  analysis.rst  arc.rst  atom_selection.rst  binpos.rst  building_docs.rst  compatibility.rst  conf.py  dcd.rst  faq.rst  file_formats.rst  geometry.rst  getting_started.rst  hdf5.rst  hdf5_format.rst  index.html  index.rst  installation.rst  io.rst  lh5.rst  load_functions.rst  loading.rst  make.bat  mdconvert.rst  mdcrd.rst  netcdf.rst  new_to_python.rst  pdb.rst  reporters.rst  requirements.txt  requirements.yaml  rmsd.rst  style.rst  tICA.rst  topology.rst  trajectory.rst  trr.rst  utils.rst  (+4 more)
examples/: NMR.ipynb  WebGL-Viewer.ipynb  ala2.h5  atom-selection.ipynb  centroids.ipynb  cluster_aggregation_analysis.ipynb  clustering.ipynb  example_clustering.py  example_hbonds.py  example_iterload.py  example_openmm.py  example_pca.py  example_ramachandran.py  example_rmsd.py  example_rmsd_benchmark.py  example_two_pass_clustering.py  hbonds.ipynb  iterload.ipynb  native-contact.ipynb  nmr.ipynb  pi_stacking.ipynb  principal-components.ipynb  principle-components.ipynb  ramachandran-plot.ipynb  rmsd-benchmark.ipynb  rmsd-drift.ipynb  simulation-with-openmm.ipynb  solvent-accessible-surface-area.ipynb  test_examples.py  two-pass-clustering.ipynb
mdtraj/: __init__.py  _version.py  io.py  trajectory.py
new/: setup.py  test.py
scripts/: findhbpairs.py  mdconvert  mdconvert.py  mdinspect  mdinspect.py
tests/: __init__.py  conftest.py  test_aggregate.py  test_alignment.py  test_angles.py  test_arc.py  test_binpos.py  test_capi.py  test_cluster.py  test_contact.py  test_crd.py  test_dcd.py  test_dihedral.py  test_distance.py  test_docstrings.py  test_drid.py  test_dssp.py  test_dtr.py  test_element.py  test_geometry.py  test_gro.py  test_gsd.py  test_hbonds.py  test_hdf5.py  test_hoomdxml.py  test_io.py  test_lammpstrj.py  test_lh5.py  test_load.py  test_lprmsd.py  test_mae.py  test_make_whole.py  test_mdconvert.py  test_mdcrd.py  test_mol2.py  test_neighborlist.py  test_neighbors.py  test_netcdf.py  test_nmr.py  test_order.py  (+28 more)
tools/: LICENSE_HEADER  README.md  examples_rst.py  hash_funcs.py  travis-artifacts.py
(+693 files in other folders)
