[build-system]
requires = [
    "setuptools",
    "versioneer[toml]",
    "wheel",
    "numpy~=2.0",
    "Cython>=3.0.0",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "mdtraj/_version.py"
versionfile_build = "mdtraj/_version.py"
tag_prefix = ""

[tool.ruff]
line-length=119
extend-exclude = ["mdtraj/_version.py"]

[tool.ruff.lint]
select = [
    "F",
    "I",
    "E",
    "W",
    "UP",
    "NPY",
]

[tool.ruff.lint.per-file-ignores]
# Would really, really like to get rid of F403, though F401 is okay
"__init__.py" = ["F401", "F403"]
"*" = ["UP031", "NPY002"]
"mdtraj/geometry/__init__.py" = ["F403", "F405"]
"mdtraj/core/trajectory.py" = ["F401"]
"mdtraj/utils/unit/**" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "examples",
]
addopts = "-v -ra"
filterwarnings = [
    "ignore:.*Function restrict_atoms is deprecated;.*:DeprecationWarning",
    "ignore:.*Using or importing the ABCs from 'collections' instead of.*:DeprecationWarning",
    "ignore:.*The 'netCDF4' Python package.*:UserWarning",
    "ignore:.*top= kwargs ignored since this file parser does not support it.*:UserWarning",
    "ignore:.*object name is a Python keyword.*:tables.NaturalNameWarning",
    "ignore:.*Casting *:mdtraj.utils.validation.TypeCastPerformanceWarning",
    "ignore:.*Unlikely unit cell *:UserWarning",
]

[tool.coverage.run]
omit = [
    "*test_*.py",
    "*testing/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
